api-spring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring
          image: jaksonsneider/spring:v2
          ports:
            - containerPort: 8081
          resources:
