api-spring/serviceNodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app
spec:
  selector:
    app: spring-app
  ports:
    - name: "service-spring-aws"
      protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
  type: NodePort
