api-spring/ingress.yaml
# CONFIGURAÇÃO HTTP

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: default
spec:
  rules:
    - host: ec2-54-233-175-6.sa-east-1.compute.amazonaws.com
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              serviceName: service-app
              servicePort: 8081
          - path: /v2
            pathType: Prefix
            backend:
              serviceName: service-app
              servicePort: 8081

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-app
  namespace: default
spec:
  rules:
    - host: ec2-54-233-175-6.sa-east-1.compute.amazonaws.com
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              serviceName: service-app
              servicePort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: default
spec:
  rules:
    - host: api-dev.myservice.com
      http:
        paths:
          - path: /
            backend:
              serviceName: service-spring
              servicePort: 8081
    - host: api.myservice.com
      http:
        paths:
          - path: /
            backend:
              serviceName: service-spring
              servicePort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - https-example.foo.com
      secretName: testsecret-tls
  rules:
    - host: https-example.foo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
