api-spring/k8s-complete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pod
  template:
    metadata:
      labels:
        app: pod
    spec:
      containers:
        - image: jaksonsneider/nginx:blue
          name: nginx-blue
          ports:
            - containerPort: 80
          resources:

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  lables:
    app: service
spec:
  selector:
    app: pod
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocal: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    app: ingress
spec:
  rules:
    - host: my-ingress.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
    - host: red.my-ingress.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
